Fix video on mobile

--- a/resources/assets/sass/videos.scss
+++ b/resources/assets/sass/videos.scss
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: center;
     z-index: -1;
-    @media #{$small-up} {
+    @media #{$medium-up} {
       display: flex;
       z-index: 200;
     }
